# Moms_ML_project

./: README.md  environment.yaml  mkdocs.yml  noxfile.py  pyproject.toml
docs/: index.md  reference.md  style.css
new_proj/: README.md
src/PythonTemplate/: __init__.py  main.py
tests/: TestNotebook.ipynb  test_main.py
tests/.ipynb_checkpoints/: TestNotebook-checkpoint.ipynb
