[tool.poetry]
name = "PythonTemplate"
version = "0.1.0"
description = ""
authors = ["Ishan Chakravorty <ishan.chakravorty@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
numpy = "^1.23.4"
scipy = "^1.9.3"
simpy = "^4.0.1"
matplotlib = "^3.6.2"
opencv-python = "^4.6.0"
tensorflow = "^2.10.1"
Jinja2 = "^3.1.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
coverage = { version = "^6.4.4", extras = ["toml"] }
isort = "^5.10.1"
lxml = "^4.9.1"
mkdocs = "^1.3.1"
mkdocs-mermaid2-plugin = "^0.6.0"
mkdocstrings = "^0.19.0"
mkdocstrings-python = "^0.7.1"
mypy = "^0.971"
nox = "^2022.8.7"
nox-poetry = "^1.0.1"
pip-licenses = "^3.5.4"
pylint = "^2.15.0"
pytest = "^7.1.2"
pytest-benchmark = "^3.4.1"
types-pillow = "^9.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

#[[tool.poetry.source]]
#name = "cv_nm"
#url = "https://gitlab.cc-asp.fraunhofer.de/api/v4/groups/iais-nm-cv/-/packages/pypi/simple"

[tool.isort]
profile = "black"
known_first_party = "src/*"

[[tool.mypy.overrides]]
module = ["matplotlib.*", "tqdm", "pytest_benchmark.*"]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
